[gd_scene load_steps=9 format=3 uid="uid://clve0s0mtn7bx"]

[ext_resource type="PackedScene" uid="uid://c5k3aj7yblg0f" path="res://demo/test-scenes/test-scene-basic/TestSceneBasic.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dhrqqo38wiuqi" path="res://pool-manager/Pool2DBasic.tscn" id="2"]
[ext_resource type="PackedScene" path="res://demo/src/FractureShard.tscn" id="3"]
[ext_resource type="PackedScene" path="res://demo/src/point-fracture-ball/PointFractureBall.tscn" id="4"]
[ext_resource type="Script" path="res://demo/src/PointFracture.gd" id="5"]
[ext_resource type="PackedScene" path="res://demo/src/CutShapeVisualizer.tscn" id="6"]
[ext_resource type="PackedScene" path="res://demo/src/Arrow.tscn" id="7"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 1.0

[node name="PointFractureSceneBasic" instance=ExtResource("1")]

[node name="PointFracture" type="Node2D" parent="." index="0"]
script = ExtResource("5")
fracture_body_color = Color(0.529412, 0.807843, 0.819608, 1)
no_ammo_line_color = Color(0.843137, 0.384314, 0.384314, 1)

[node name="SourceParent" type="Node2D" parent="PointFracture" index="0"]

[node name="Edge" type="StaticBody2D" parent="PointFracture" index="1"]
modulate = Color(0.537255, 0.266667, 0.266667, 1)
physics_material_override = SubResource("1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PointFracture/Edge" index="0"]
polygon = PackedVector2Array(1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928, -1952, -928, -1952, 1120, 1952, 1120, 1952, -1120, -1952, -1088, -1952, -928)

[node name="Polygon2D" type="Polygon2D" parent="PointFracture/Edge" index="1"]
color = Color(0.596078, 0.596078, 0.596078, 1)
polygon = PackedVector2Array(1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928, -1952, -928, -1952, 1120, 1952, 1120, 1952, -1120, -1952, -1120, -1952, -928)

[node name="Line2D" type="Line2D" parent="PointFracture/Edge" index="2"]
points = PackedVector2Array(-1888, -928, 1888, -928, 1888, 960, 576, 960, 448, 672, -384, 672, -512, 960, -1888, 960, -1888, -928)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Pool_FractureShards" parent="PointFracture" index="2" instance=ExtResource("2")]
placed_in_level = true
instance_template = ExtResource("3")
max_amount = 100
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_CutVisualizer" parent="PointFracture" index="3" instance=ExtResource("2")]
placed_in_level = true
instance_template = ExtResource("6")
max_amount = 25
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_PointFractureBall" parent="PointFracture" index="4" instance=ExtResource("2")]
placed_in_level = true
instance_template = ExtResource("4")
max_amount = 5

[node name="FlickLine" type="Line2D" parent="PointFracture" index="5"]
modulate = Color(1.66, 0.56, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Arrow" parent="PointFracture/FlickLine" index="0" instance=ExtResource("7")]

[node name="Camera2D" parent="." index="1"]
zoom = Vector2(0.5, 0.5)

[node name="Title" parent="CanvasLayer" index="0"]
text = "POINT FRACTURE (max ammo: 5)"

[node name="InfoLabel" parent="CanvasLayer" index="1"]
text = "CHANGE TEST [W]
FLICK [LMB HOLD]
FULLSCREEN [F]
QUIT [ESC]"
